# webhangin

./: .gitignore  .gitmodules  README.md  claude.md  run.bat  run.sh
.claude/: settings.local.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/streaming/: handler.rs  ice.rs  mod.rs  room.rs  turn_server.rs
frontend/: README.md  gaussian-splats-3d.d.ts  next.config.ts  package-lock.json  package.json
frontend/app/: AnimaleseSpeechBubble.tsx  layout.tsx  page.tsx
frontend/app/components/: NineSliceBox.tsx  PixelArtCanvas.tsx
frontend/app/room/: AnimaleseChatBubble.tsx  BackgroundMusic.tsx  Jukebox.tsx  JukeboxAudio.tsx  JukeboxUI.tsx  RoomEffects.tsx  SpatialAudio.tsx  SplatViewer.tsx  page.tsx
frontend/app/stream/: page.tsx
frontend/assets/editing_files/: TWISTED_cat_character.blend  TWISTED_cat_character.blend1  YOINKED_cat_character.blend  YOINKED_cat_character.glb  floor_model.bbmodel  ui_box_element_1.aseprite  webhanging_room_walls.bbmodel
frontend/assets/models/: TWISTED_cat_character.glb  floor_1.gltf  wall_1.gltf
frontend/lib/: iceServers.ts
frontend/public/assets/editing_files/: TWISTED_cat_character.blend  TWISTED_cat_character.blend1  TWISTED_cat_character_b4_animation.blend  TWISTED_cat_character_b4_animation.blend1  TWISTED_cat_character_b4_animation.glb  TWISTED_dog_character copy.blend  TWISTED_dog_character copy.blend1  TWISTED_dog_character.blend  TWISTED_dog_character.blend1  TWISTED_mouse_character.blend  YOINKED_cat_character.blend1  character_creation_journal.aseprite  ui_generation_box_1.aseprite  (+2 more)
(+2 files in other folders)
